cmake_minimum_required(VERSION 3.12.0)

project(huoguo)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    include($ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin") 
ELSE () 
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}") 
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

option(BUILD_SAMPLE "build with sample" OFF)
option(BUILD_TEST   "build with test" OFF)

set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (${BUILD_TEST})
find_package(GTest REQUIRED)
if (NOT GTest_FOUND)
    message(FATAL_ERROR  "GTest Not Found")
else()
    message(STATUS "GTest Found done")
endif()
include(GoogleTest)
include(CTest)
endif()

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/bin)

add_subdirectory(utils)
add_subdirectory(sdp)
add_subdirectory(net)
add_subdirectory(rtp)
add_subdirectory(rtsp)
add_subdirectory(play)
add_subdirectory(app)
