cmake_minimum_required(VERSION 3.12.0)

project(huoguo)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
add_library(net STATIC ${SRC_LIST})
add_library(huoguo::net ALIAS net)
target_link_libraries(net PUBLIC huoguo::utils)
target_include_directories(net PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    target_compile_definitions(net PRIVATE USE_EPOLL_POLLER USE_EVENTFD_WAKEUP)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows") 
    target_compile_definitions(net PRIVATE USE_SELECT_POLLER USE_SOCKPAIR_WAKEUP )
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin") 
    target_compile_definitions(net PRIVATE USE_KQUEUE_POLLER USE_PIPE_WAKEUP)
ELSE () 
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}") 
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

if (${BUILD_SAMPLE})
    message(STATUS "build with sample")
    add_subdirectory(sample)
endif()