cmake_minimum_required(VERSION 3.12.0)

project(huoguo)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
add_library(utils STATIC ${SRC_LIST})
add_library(huoguo::utils ALIAS utils)
target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    target_compile_definitions(utils PRIVATE _CRT_SECURE_NO_WARNINGS)
    target_include_directories(utils PRIVATE ${OPENSSL_HOME}/include)
    target_link_libraries(utils PRIVATE ${OPENSSL_HOME}/lib/libcrypto.lib)
    message(STATUS ${OPENSSL_HOME}/lib)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin") 
ELSE () 
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}") 
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

IF (NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
enable_testing()
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/test TEST_LIST)
add_executable(unittest ${TEST_LIST})
target_link_libraries(unittest PRIVATE GTest::gtest GTest::gtest_main huoguo::utils)
gtest_discover_tests(unittest)
ENDIF()
